cabal-version: 3.0
name:          optics-sop
version:       0.1
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Adam Gundry, Andres Löh, Andrzej Rybczak
tested-with:   GHC == { 9.2.8, 9.4.8, 9.6.7, 9.8.4, 9.10.3, 9.12.4, 9.14.1 }
synopsis:      Optics for generics-sop, and using generics-sop
category:      Data, Optics, Lenses, Generics
description:
  This package provides:
  .
  * optics to work with @generics-sop@ (or @sop-core@) types,
  .
  * machinery to construct optics using @generics-sop@.

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-sop

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        EmptyCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedLabels
                        PatternSynonyms
                        RankNTypes
                        ScopedTypeVariables
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        ViewPatterns

library
  import:           language
  hs-source-dirs:   src

  build-depends: base          >=4.16    && <5
               , generics-sop  >=0.3.1.0 && <0.6
               , optics-core   >=0.4     && <0.6

  exposed-modules: Optics.SOP
                   Optics.SOP.ToTuple
                   Generics.SOP.Optics
