name:          optics-th
version:       0.2
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Andrzej Rybczak
cabal-version: 1.24
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1, GHCJS ==8.4
synopsis:      Optics construction using TemplateHaskell
category:      Data, Optics, Lenses
description:
  This package is part of the @<https://hackage.haskell.org/package/optics optics>@
  package family.  It provides machinery to construct optics using @TemplateHaskell@.
  .
  See the @template-haskell-optics@ package for optics to work with @template-haskell@ types.

extra-doc-files:
  CHANGELOG.md

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-th

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends: base                   >= 4.9       && <5
               , containers             >= 0.5.7.1   && <0.7
               , mtl                    >= 2.2.2     && <2.3
               , optics-core            >= 0.2       && <0.3
               , template-haskell       >= 2.11      && <2.16
               , th-abstraction         >= 0.2.1     && <0.4
               , transformers           >= 0.5       && <0.6

  exposed-modules: Optics.TH

                   -- internal modules
                   Optics.TH.Internal.Utils
                   Optics.TH.Internal.Product
                   Optics.TH.Internal.Sum

  other-modules:   Language.Haskell.TH.Optics.Internal

test-suite optics-th-tests
  default-language: Haskell2010
  hs-source-dirs:   tests
  ghc-options:      -Wall

  build-depends: base
               , optics-core
               , optics-th

  type:    exitcode-stdio-1.0
  main-is: Optics/TH/Tests.hs

  other-modules: Optics.TH.Tests.T799
