name:          optics-vl
version:       0.1
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Andrzej Rybczak
cabal-version: >=1.10
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1
synopsis:      Utilities for compatibility with van Laarhoven optics
category:      Data, Optics, Lenses
description:
  This package is part of the @optics@ package family.  It provides utilities
  for converting between the 'Optic' type defined by @optics@ and the van
  Laarhoven representations of optics (in particular isomorphisms and prisms).

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-vl

library
  default-language: Haskell2010
  hs-source-dirs:   src

  build-depends: base                   >= 4.9        && <5
               , optics-core            >= 0.1        && <1
               , profunctors            >= 5.0        && <6.0

  ghc-options: -Wall

  exposed-modules: Optics.VL
