name:          optics-vl
version:       0.2
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Andrzej Rybczak
cabal-version: 1.24
tested-with:   ghc ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1, GHCJS ==8.4
synopsis:      Utilities for compatibility with van Laarhoven optics
category:      Data, Optics, Lenses
description:
  This package is part of the @<https://hackage.haskell.org/package/optics optics>@
  package family.  It provides utilities for converting between the 'Optic' type
  defined by @<https://hackage.haskell.org/package/optics optics>@ and the van
  Laarhoven representations of optics that require definitions outside of @base@
  (in particular isomorphisms and prisms).

extra-doc-files:
  CHANGELOG.md

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-vl

library
  default-language: Haskell2010
  hs-source-dirs:   src

  build-depends: base                   >= 4.9        && <5
               , indexed-profunctors    >= 0.1        && <0.2
               , optics-core            >= 0.2        && <0.3
               , profunctors            >= 5.0        && <6.0

  ghc-options: -Wall

  exposed-modules: Optics.VL
