cabal-version: 2.2
name:          optics-vl
version:       0.2.1
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Andrzej Rybczak
tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7
                || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.3 || ==9.8.1, GHCJS ==8.4
synopsis:      Utilities for compatibility with van Laarhoven optics
category:      Data, Optics, Lenses
description:
  This package is part of the @<https://hackage.haskell.org/package/optics optics>@
  package family.  It provides utilities for converting between the 'Optic' type
  defined by @<https://hackage.haskell.org/package/optics optics>@ and the van
  Laarhoven representations of optics that require definitions outside of @base@
  (in particular isomorphisms and prisms).

extra-doc-files:
  CHANGELOG.md

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   optics-vl

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        EmptyCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        OverloadedLabels
                        PatternSynonyms
                        RankNTypes
                        ScopedTypeVariables
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        ViewPatterns

library
  import:           language
  hs-source-dirs:   src

  build-depends: base                   >= 4.10       && <5
               , indexed-profunctors    >= 0.1        && <0.2
               , optics-core            >= 0.2        && <0.5
               , profunctors            >= 5.0        && <6.0

  exposed-modules: Optics.VL
