name:          template-haskell-optics
version:       0.2
license:       BSD3
license-file:  LICENSE
build-type:    Simple
maintainer:    optics@well-typed.com
author:        Andrzej Rybczak
cabal-version: 1.18
tested-with:   GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7
                || ==9.0.2 || ==9.2.2, GHCJS ==8.4
synopsis:      Optics for template-haskell types
category:      Data, Optics, Lenses
description:
  This package provides optics to work with @template-haskell@ types.
  .
  See the @optics-th@ package for machinery to construct optics using @TemplateHaskell@.

extra-doc-files:
  CHANGELOG.md

bug-reports:   https://github.com/well-typed/optics/issues
source-repository head
  type:     git
  location: https://github.com/well-typed/optics.git
  subdir:   template-haskell-optics

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends: base                   >= 4.10      && <5
               , optics-core            >= 0.4       && <0.5
               , containers             >= 0.5.10.2  && <0.7
               , template-haskell       >= 2.12      && <2.19
               , th-abstraction         >= 0.4       && <0.5

  exposed-modules: Language.Haskell.TH.Optics
